<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_flower"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/inputFlowerUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flower_image_url"
        android:layout_margin="8dp"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/inputFlowerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flower_name"
        android:layout_margin="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/inputFlowerPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flower_price"
        android:layout_margin="8dp"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/addFlowerToList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_flower"
        style="@style/ButtonPanel"/>


</LinearLayout>
